--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <img src="assets/avatar.png" 
         alt="Descricação da imagem" />
-        <p>@Victor</p>
+        <p>@curcio.dev</p>
       </div>
 
      <div id="switch" onclick="toggleMode()">
@@ -29,35 +29,47 @@
      </div>
       <ul>
         <li>
-          <a href="https://www.youtube.com/watch?v=XC3DNb8Hcoc" target="_blank" class="whatsapp">
+          <a href="https://wa.me/5532999709243?text=Ol%C3%A1%20Victor" target="_blank" class="whatsapp">
             <span>
             <ion-icon name="logo-whatsapp" class="IconZap"></ion-icon>WhatsApp</a>
             </span>
 
           </li>
         <li>
-          <a href="https://www.duolingo.com/learn" target="_blank" class="linkedin">
+          <a href="https://www.linkedin.com/in/víctor-curcio-bbb705377" target="_blank" class="linkedin">
 
            <ion-icon name="logo-linkedin" class="IconLink">
           </ion-icon>
             LinkedIn</a>
         </li>
         <li>
-          <a href="https://globoplay.globo.com/categorias/novelas" target="_blank" class="email">
+          <a href="#" class="email" onclick="mostrarEmail(event)">
             <ion-icon name="mail-outline" class="IconEmail">
-             </ion-icon>Email Profissional</a>
+             </ion-icon> <span id="email-texto" class="email-texto">Email Profissional</span>
+</a>
         </li>
         <li>
-          <a href="https://www.google.com/search?client=opera-gx&hs=eUV&sca_esv=e4a301214ebaa168&sxsrf=AE3TifNheGI7_5J3ttaavWEnw0I8eVSovA:1753402232342&q=aurora+boreal&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeuYzzFkfneXafNx6OMdA4MRo3L_oOc-1oJ7O1RV73dx36Noyh0tkj-ocf0PUuDvIrR84E6DI_e6IMCObmxe7ehUgsmVG88u-01Gyb_xrntYU3NYn815W1OzJbuEu-QohohEo_pmgSRoU4K4o4gzGa9G2m8GfsMoMoQKPOwdvTTiwt14DRw&sa=X&ved=2ahUKEwiK8NOp3NaOAxUYELkGHayREIUQtKgLKAF6BAghEAE&biw=1879&bih=964&dpr=1" target="_blank" class="github">
+          <a href="https://github.com/curcioDev" target="_blank" class="github">
             
             <ion-icon name="logo-github" class="IconGit"></ion-icon>Git Hub</a>
+
+             <li>
+            <a href="https://www.instagram.com/curcio.dev?igsh=dHZiZnhxOGMzNnQ3" target="_blank" class="insta"><ion-icon name="logo-instagram" class="iconInsta"></ion-icon>Instagram</a>
+          </li>
+
             </ul>
             <footer>Desenvolvido  com   ♥  por <a href="https://wa.me/5532999709243?text=Ol%C3%A1%20Victor" target="_blank" class="victor">Victor Curcio</a>
+          </li>
+         
        </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 <script src="/script.js">
 </script>
+
+
+
+
   </body>
 </html>
