correção de bugs,e implementação de copy

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             LinkedIn</a>
         </li>
         <li>
-          <a href="#" class="email" onclick="mostrarEmail(event)">
+          <p class="email" onclick="mostrarEmail(event)">
             <ion-icon name="mail-outline" class="IconEmail">
              </ion-icon> <span id="email-texto" class="email-texto">Email Profissional</span>
-</a>
+            </p>
         </li>
         <li>
           <a href="https://github.com/curcioDev" target="_blank" class="github">
@@ -69,6 +69,7 @@
 </script>
 
 
+<div id="copiado-toast" class="toast">E-mail copiado!</div>
 
 
   </body>
