--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
  <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MasterLinks2</title>
+    <title>CurcioLinks</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -44,10 +44,9 @@
         </li>
         <li>
           <p class="email" onclick="mostrarEmail(event)">
-               <ion-icon name="mail-outline" class="IconEmail"></ion-icon>
-                <span id="texto-animado" class="email-texto fade-in">Email Profissional</span>
-            </
-
+            <ion-icon name="mail-outline" class="IconEmail">
+             </ion-icon> <span id="email-texto" class="email-texto">Email Profissional</span>
+            </p>
         </li>
         <li>
           <a href="https://github.com/curcioDev" target="_blank" class="github">
